app/assets/stylesheets/hrwa.css
/* ... */
/* Comment Form */
#commentForm .submit .btn-primary {
  margin-right:20px;
}

/* Citation Page */
.single_citation {
  margin-bottom:10px;
}

/* Facet Popups */

ul.facet_extended_list li a { color:#0064cd }

/* Modal Stuff */
ul#modal-download-options {bottom:100%;top:auto;text-align:left;}
#modal-download-btn-group {float:left;margin-left:10px;}

/* bootstrap img override */
/* must fix this to work */
/*
[class^="icon-"],[class*=" icon-"]{display:inline-block;width:14px;height:14px;line-height:14px;vertical-align:text-top;background-image:url("./glyphicons-halflings.png");background-position:14px 14px;background-repeat:no-repeat;*margin-right:.3em;}[class^="icon-"]:last-child,[class*=" icon-"]:last-child{*margin-left:0;}
.icon-white{background-image:url("./glyphicons-halflings-white.png");}
*/

.row img { max-width:100%; }


span.Z3988 { display:none; }

/*!
 * App Specific Responsive stuffs
 */

@media (max-width: 480px) {
  body { background-image:none; }
  .navbar { border:1px solid #000; border-bottom:0; border-top:0; }
  #inner-headline { background:rgba(255,255,255,.5)!important; text-align:left; margin-top:1em;padding-top:2px; }
  #inner-headline h1 span {float:none;}
  #inner-headline h1, #inner-headline h1 a  { line-height:18px; font-size:26px; text-shadow:1px 1px 0 black; margin:0; padding-top:.4em; }
  #inner-headline .subhead { display:block; margin:0;font-size:.8em!important; }
  #inner-headline h2 { line-height:14px; font-size:13px; text-shadow:1px 1px 0 black; margin:0; font-family: "arial narrow", ArialNarrowRegular, arial, sans-serif; }
  #cul_top, #crowndown { -webkit-transform:skewX(0); transform:skewX(0); background:transparent; width:100%; display:none; }
  #crowndown { margin-left:0; margin-right:2px; }
  #top_form_submit_label { width:3em; }
  #inner-headline h2 { line-height:1em!important;  }
  #primary_container { clear:both; }
  #primary article .caption h5.index_title { white-space: normal; width: auto; overflow: visible; text-overflow: clip; }
  #search_results li {width:100% !important;}

  /* erik's new tab attempt - solution is in the markup */
  ul.nav-tabs { padding-left:0; }
  .nav-tabs li a { padding-left:4px; padding-right:4px; font-size:100%; }
/* eric's tabs to pills
  .nav-tabs li {float:none;text-align:center;display:inline-block;}
  .nav-tabs li a {
    padding-top: 4px;
    padding-bottom: 4px;
    margin-top: 2px;
    margin-bottom: 4px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
  }
  .nav-tabs li.active a, .nav-tabs li a:hover, .nav-tabs li a:active {
    text-align:center;
    }
  ul.nav-tabs {text-align:center;padding-bottom:.5em;}
  .nav-tabs li.active a {
    border-bottom:1px solid #888 !important;
  }
*/
  #home-tab-content .tab-pane ul:not(.no-cols), ul.facet_extended_list { -webkit-column-count:1;-moz-column-count:1;column-count:1; }
  #col_control { display:none!important; }
}

@media (max-width: 767px) {
  #search_results li {width:48%;margin:0px 1%;}
  /*#search_results ul {margin-left:25px;}*/
  .subnav {margin-right:-20px;}

  #show_item_information_title {
    margin-top:10px !important;
  }

  #user_util_links.in.collapse {border-top-width:0px !important;}
}

@media (min-width: 768px) and (max-width: 979px) {
  #outer-container { margin-top:0; }
  #cul_top, #crowndown { -webkit-transform:skewX(0); transform:skewX(0); background:transparent; width:100%; display:none; }
  #navbar_right_wrapper {float:right;}

  .tab-thumbnails a.thumbnail { height:110px; overflow:hidden; }
  .tab-thumbnails a.thumbnail img { max-height:110px; }
}

@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation: portrait) {
  #inner-headline h2 { line-height:14px; font-size:15px; text-shadow:1px 1px 0 black; margin:4px 0;padding:4px; }
}

@media (max-width: 979px) {
  body { padding-top:0; }
  #outer-container { margin-top:0; margin-left:auto; margin-right:auto; }
  #cul_top, #crowndown { -webkit-transform:skewX(0); transform:skewX(0); background:transparent; width:100%; display:none; }
  .navbar #top_q_wrapper { width:100%; margin-bottom:1em; -webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
  #q {width:99%;}
  #top_form_submit_label {display:none;}
  #topbarformdiv { border:0!important; }
  .navbar-fixed-top .navbar-inner.fill { padding:0 10px 0px; margin-left:-10px;margin-right:-10px;}
  #inner-headline-outer  {margin-top:0; padding-top:0.5em; }
  #inner-headline { background:rgba(255,255,255,.3); text-align:center; }
  #inner-headline h1 { line-height:.8em; }
  #inner-headline h2 { line-height:1.0em; }
  #user_util_links {margin-top:2px;margin-bottom:5px; width:auto;width:120px;text-align:left;border:1px solid #AAAAAA;border-width:0px 1px;background-color:#F2F2F0;}
  #user_util_links.in.collapse {border-top:1px solid #AAAAAA;}
  #user_util_links li {border-bottom:1px solid #AAAAAA;width:100%;}
  #user_util_links li:hover, #user_util_links li:active {border-top:0px solid #AAAAAA;}
  #show_utils_btn {line-height:18px; margin-right:2px; padding-left:2px;padding-right:2px;}
  #tabmob_datasource .radio { min-width:40px; }
}

@media (min-width: 480px) and (max-width: 979px) {
  #inner-headline h1 span.pull-left {float:none;display:inline-block;}
  #inner-headline .subhead { clear:both; display:block;padding-top:5px;padding-bottom:2px;}
}

@media (min-width: 980px) {
    .navbar #q {padding-right:15px;}
}

@media (min-width: 1200px) {
#primary div.pagination { padding-left:10px; }
#inner-headline h1, #inner-headline h1 a {
font-size:56px;
letter-spacing:12px;
}
}

